--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-errors": "^2.0.0",
     "mongodb": "^5.8.1",
     "ngx-cookie-service": "^16.0.0",
+    "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
     "swagger-ui-express": "^5.0.0",
     "tslib": "^2.3.0",
