--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng build && node ./bin/www",
     "build": "ng build",
     "server": "nodemon ./bin/www",
-    "client": "ng serve --open"
+    "client": "ng serve --open",
+    "render-deploy": "ng build --configuration=production"
   },
   "private": true,
   "dependencies": {
@@ -49,7 +50,7 @@
     "typescript": "~5.1.3"
   },
   "engines": {
-    "node": "16.14.2",
-    "npm": "8.5.0"
+    "node": "18.17.0",
+    "npm": "9.6.7"
   }
 }
